# criterion-comparisons

./: criterion-comparisons.cabal
app/: Main.hs
