name:                random-benchmarks
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/idontgetoutmuch/criterion-comparisons#readme>
homepage:            https://github.com/idontgetoutmuch/criterion-comparisons
license:             BSD3
license-file:        LICENSE
author:              Dominic Steinitz Kuleshevich
maintainer:          dominic@steinitz.org
copyright:           2019 Dominic Steinitz
category:            Data
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

executable Analysis
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends: base
               , Frames
               , lens
               , vinyl
               , inline-r
               , text
               , primitive
               , formatting

source-repository head
  type:     git
  location: https://github.com/idontgetoutmuch/criterion-comparisons
